# neo-pipeline

./: .gitignore  README.md  lambda-function.tf  s3.tf  schema.sql
lambda/: extract.py  load.py  main.py  nasa-api.py  pyproject.toml  transform.py
terraform/: cloudwatch.tf  iam.tf  init.tf  lambda-function.tf  lambda_layer.tf  rds.tf  s3.tf  variables.tf
